--- a/bibliography.bib
+++ b/bibliography.bib
@@ -175,19 +175,14 @@ investigated.},
 }
 
 @article{flowsheet_1998,
-	title = {Organisation for economic cooperation and development: {Convention} on {Combating} {Bribery} of {Foreign} {Public} {Officials} in {International} {Business} {Transactions}, {Paris}, {November} 20, 1997: 1–8},
-	volume = {3},
-	issn = {1084-4791, 1936-4830},
-	shorttitle = {Organisation for economic cooperation and development},
-	url = {http://link.springer.com/10.1007/s12117-998-1085-8},
-	doi = {10.1007/s12117-998-1085-8},
+	title = {Spent {Nuclear} {Fuel} {Reprocessing} {Flowsheet}},
+	shorttitle = {Spent {Nuclear} {Fuel} {Reprocessing} {Flowsheet}},
+	url = {https://www.oecd-nea.org/science/docs/2012/nsc-wpfc-doc2012-15.pdf},
 	language = {en},
-	number = {3},
 	urldate = {2018-03-14},
-	journal = {Trends in Organized Crime},
-	author = {{Organisation for Economic Cooperation and Development}},
-	month = mar,
-	year = {1998},
-	pages = {77--82},
+	journal = {Nuclear Energy Agency},
+	author = {{Organisation for Economic Co-operation and Development}},
+	month = jun,
+	year = {2012},
 	file = {Organisation for Economic Cooperation and Development - 1998 - Organisation for economic cooperation and developm.pdf:C\:\\Users\\Greg\\Zotero\\storage\\LTWXQPK6\\Organisation for Economic Cooperation and Development - 1998 - Organisation for economic cooperation and developm.pdf:application/pdf}
 }
