--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -34,7 +34,7 @@ The diversion of significant quantities of special nuclear material from the nuc
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Background: \Cyclus}
-\Cyclus models the flow of material through agent-based user-defined nuclear fuel cycles. Facilities in nuclear fuel cycles vary, requiring a diverse collection of pre-designed facilities, archetypes. \Cycamore, \Cyclus Additional Modules Repository, provides the common facilities seen simulations (separations, enrichment, reactor, etc.). Archetypes provide a mold for users to input values specific to each facility with a known output \Cyclus can interpret. Simulations run in discrete time steps that allow exact isotopes and respective quantities to be tracked in time between regions or facilities \cite{huff_fundamental_2016}. Tracking requires a form of signature or observable to follow the material accurately throughout an institution or cycle. Current capabilities would be truck deliveries, power draw, and 'smoke' production that have been proven sufficient for maximum likelihood estimations of diversion \cite{Hou_2016,Yilmaz_2016}.
+\Cyclus models the flow of material through agent-based user-defined nuclear fuel cycles. Facilities in nuclear fuel cycles vary, requiring a diverse collection of pre-designed facilities, archetypes. \Cycamore, the CYClus Additional MOdules REpository, provides the common facilities seen in simulations (separations, enrichment, reactor, etc.). Archetypes provide a mold for users to input values specific to each facility with a known output \Cyclus can interpret. Simulations run in discrete time steps that allow exact isotopes and respective quantities to be tracked in time between regions or facilities \cite{huff_fundamental_2016}. Tracking requires a form of signature or observable to follow the material accurately throughout an institution or cycle. Current capabilities would be truck deliveries, power draw, and 'smoke' production that have been proven sufficient for maximum likelihood estimations of diversion \cite{Hou_2016,Yilmaz_2016}.
 \Cyclus' discrete time allows users to investigate diversion and flag the time and location diversion occurs.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
