--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -34,7 +34,7 @@ The diversion of significant quantities of special nuclear material from the nuc
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Background: \Cyclus}
-\Cyclus models the flow of material through agent-based user-defined nuclear fuel cycles. Facilities in nuclear fuel cycles vary, requiring a diverse collection of pre-designed facilities, archetypes. \Cycamore, the CYClus Additional MOdules REpository, provides the common facilities seen in simulations (separations, enrichment, reactor, etc.). Archetypes provide a mold for users to input values specific to each facility with a known output \Cyclus can interpret. Simulations run in discrete time steps that allow exact isotopes and respective quantities to be tracked in time between regions or facilities \cite{huff_fundamental_2016}. Tracking requires a form of signature or observable to follow the material accurately throughout an institution or cycle. Current capabilities would be truck deliveries, power draw, and 'smoke' production that have been proven sufficient for maximum likelihood estimations of diversion \cite{Hou_2016,Yilmaz_2016}.
+\Cyclus models the flow of material through agent-based user-defined nuclear fuel cycles. Facilities in nuclear fuel cycles vary, requiring a diverse collection of pre-designed facilities, archetypes. \Cycamore, the CYClus Additional MOdules REpository, provides the common facilities seen in simulations (separations, enrichment, reactor, etc.). Archetypes provide a mold for users to input values specific to each facility with a known output \Cyclus can interpret. Simulations run in discrete time steps that allow exact isotopes and respective quantities to be tracked in time between regions or facilities \cite{huff_fundamental_2016}. Tracking requires a form of signature or observable to follow the material accurately throughout an institution or cycle. Current capabilities would be truck deliveries, power draw, and steam production that have been proven sufficient for maximum likelihood estimations of diversion \cite{Hou_2016,Yilmaz_2016}.
 \Cyclus' discrete time allows users to investigate diversion and flag the time and location diversion occurs.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -60,7 +60,7 @@ The molten salt contains TRUs from electrorefining and are separated through ele
 \section{Method: \Cyclus Simulation}
 The separations facility provided by the \Cycamore library expansion is used as an initial model of a simple PRIDE facility. The separations archetype allows for the declaration of a feed stream and requires the user-definition of facility efficiencies. Each waste stream requires a material balance determined from the processes mentioned previously. The main waste streams found are metallic waste, ceramic waste from electrowinning and electroreduction, and vitrified waste. Vitrified waste contains the majority of TRUs, Sr, and rare-earth elements. The efficiencies of each stream and their isotopes are determined through theoretical material balance determined by the NEA and Hermann et al\cite{flowsheet_1998,herrmann_separation_2010}. The simple simulation was run to verify the table of efficiencies input to \Cyclus.
 
-Pyroprocessing, however, is not identical to a separations facility and requires a separate library, or archetype. The goal for this archetype is to include the variations possible in facility configuration and their respective effects on the efficiency table. Efficiencies also vary according to the feed stream resulting in different waste streams for LWR and FR fuels, for example. Multiple material choices exist for anodes and cathodes as well as other design choices that need to be taken into account. 
+Pyroprocessing, however, is not identical to a separations facility and requires a separate library, or archetype. The goal for this archetype is to include the variations possible in facility configuration and their respective effects on the efficiency table. Efficiencies also vary according to the feed stream resulting in different waste streams for LWR and FR fuels, for example. Multiple material choices exist for anodes and cathodes as well as other design choices that require consideration. 
 
 \subsection{Variations}
 
@@ -82,7 +82,7 @@ Advanced methods for electrorefining developed by KAERI \cite{lee_advanced_nodat
 	\label {tab:pressure}
 \end{table}
 
-As shown by Table I, the addition of vacuum pressure to the system improves removal efficiency with a noticeable increase between 500 and 300 mTorr. Temperature, however, exhibits the opposite effect: as temperature decreases so does salt removal substantially. This comes into effect particularly depending on material choice. The most limiting being iron, as a eutectic forms between Fe and U at 725$^{\circ}$C \cite{chapman_revision_1984}.
+As shown by Table I, the addition of vacuum pressure to the system improves removal efficiency with a noticeable increase between 500 and 300 mTorr. Temperature, however, exhibits the opposite effect: as temperature decreases so does salt removal substantially. This comes into effect particularly depending on material choice. The most limiting, iron, as a eutectic forms between Fe and U at 725$^{\circ}$C \cite{chapman_revision_1984}.
 
 \begin{table}[h]
 	\centering
@@ -100,9 +100,9 @@ As shown by Table I, the addition of vacuum pressure to the system improves remo
 	\label {tab:temperature}
 \end{table}
 
-If the facility is limited below 700$^{\circ}$C in the case of iron equipment, the efficiency is significantly hindered. In these advanced processes multiple cathodes are placed surrounding an agitating central anode. Cathode arrangement and anode rotation speed also affect the collection of uranium dendrites. Uneven, or sub-optimal, placement of cathodes result in an uneven electric field for electrolysis and lower efficiency while a high rotation speed causes remixing \cite{lee_advanced_nodate}.
+In facilities where iron equipment is present, and therefore, temperatures are limited to 700$^{\circ}$C, the efficiency is significantly hindered. In these advanced processes multiple cathodes are placed surrounding an agitating central anode. Cathode arrangement and anode rotation speed also affect the collection of uranium dendrites. Uneven, or sub-optimal, placement of cathodes result in an uneven electric field for electrolysis and lower efficiency while a high rotation speed causes remixing \cite{lee_advanced_nodate}.
 
-Inert electrodes require various voltages depending on material choice further impacting separation efficiency based on design choice \cite{koyama_development_2012}. Voltages vary depending density and chemical composition depending on porosity and interaction with LiCl-KCl. The use of a porous anode shroud improves mobility of O$^{2-}$ ions for oxidization leads to faster separation at the cost of approximately double the current depending on mesh size \cite{choi_electrochemical_2015}. 
+Inert electrodes require various voltages depending on material choice further impacting separation efficiency based on design choice \cite{koyama_development_2012}. Voltages vary depending density and chemical composition depending on porosity and interaction with LiCl-KCl. The use of a porous anode shroud improves mobility of O$^{2-}$ ions for oxidization and leads to faster separation at the cost of approximately double the current depending on mesh size \cite{choi_electrochemical_2015}. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Method: Proposed Algorithms}
 Prior methodology explored by Hou et al. and Yilmaz et al. \cite{Hou_2016,Yilmaz_2016} consist of minimum relative entropy based model and Poisson distribution respectively. Both methods are based on similar observables for the LWR fuel cycle. Enrichment facilities often have set production speeds for various enrichment levels and standard shipping options. These production speeds are monitored via IAEA inspection of waste activity or by monitoring facility power draw and smoke production. What becomes increasingly difficult is a minute increase in production that could be lost in the electrical noise of running an institution. For cases such as this where small diversions take place over an elongated period of time a fuel cycle simulation is beneficial. A nodal array of facilities and their known transport methods between each other is established and shipment times for various enrichment levels and shipping options are observed for irregularities. 
@@ -116,14 +116,14 @@ Prior methodology explored by Hou et al. and Yilmaz et al. \cite{Hou_2016,Yilmaz
 
 The method proposed by Yilmaz et al. assumes 3 fuel enrichments and two shipment speeds for simplicity. Data are collected to establish a Poisson distribution of expected delivery time. The algorithm requires a training set of approximately 10 shipments before false positive rate is minimized \cite{Yilmaz_2016}. The benefit of this method is an increased response time without sacrificing as much accuracy as traditional cumulative sum methods. 
 
-Scenarios without direct access to fuel orders require indirect observation by tracking the edges of a fuel cycle network. Increasing the number of known 'edges', or transportation routes, increase the algorithm speed with the only requirement of monitoring the intake and output of facilities rather than each shipment. Figure 1 demonstrates a partially observed network to which a hybrid minimum relative entropy model is applied. This technique results in a more lenient input compared to a maximum likelihood estimation which requires a majority of the network to be observed \cite{Hou_2016}.
+Scenarios without direct access to fuel orders require indirect observation by tracking the edges of a fuel cycle network. Increasing the number of known 'edges', or transportation routes, increase the algorithm speed with the only requirement of monitoring the intake and output of facilities rather than each shipment. Figure 1 demonstrates a partially observed network to which a hybrid minimum relative entropy model is applied. This technique results in a more lenient input compared to a maximum likelihood estimation that requires a majority of the network to be observed \cite{Hou_2016}.
 
 
 This model requires approximately 150 observed time steps to attain similar false positive rates to a Poisson distribution, however, requires substantially less direct information. While the algorithm performs well over time in obscured fuel cycles, timely detection is required to prevent proliferation. The proposed algorithm seeks to adapt and include signatures and observables from pyroprocessing facilities, providing additional edges and information to a minimum relative entropy model. The algorithm should provide a compromise of the two detection methods for a new molten salt reprocessing cycle.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
-The above demonstrates the variability in commercialized pyroprocessing facilities and potential signatures and observables that will aid diversion detection. \Cyclus also is outlined as tool in detecting shadow fuel cycles through its agent-based simulation and modular facilities, allowing for variations in plant design. Modeling and data collection of shadow fuel cycles will be performed in the \Cyclus environment after creation of a library specific to the unique needs of electrochemical refinement. Data from these simulations will be utilized in a minimum relative entropy model with additional signatures and observables to ideally reduce detection delay while maintaining high accuracy.
+This analysis demonstrates the variability in commercialized pyroprocessing facilities and potential signatures and observables that will aid diversion detection. \Cyclus also is outlined as tool in detecting shadow fuel cycles through its agent-based simulation and modular facilities, allowing for variations in plant design. Modeling and data collection of shadow fuel cycles will be performed in the \Cyclus environment after creation of a library specific to the unique needs of electrochemical refinement. Data from these simulations will be utilized in a minimum relative entropy model with additional signatures and observables to ideally reduce detection delay while maintaining high accuracy.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Acknowledgments}
